--- a/tip-calculator/index.html
+++ b/tip-calculator/index.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/base.css">
-    <link rel="stylesheet" href="./styles/objects.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/base.css" />
+    <link rel="stylesheet" href="./styles/objects.css" />
+    <link rel="stylesheet" href="./styles/components/button.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main class="container">
+      <section class="card">
+        <div class="card__left">
+          <div class="tip-buttons">
+            <h2 class="tip-buttons__title title title--dark">Select Tip %</h2>
+            <div class="tip-buttons__grid">
+              <button class="button">5</button>
+              <button class="button">10</button>
+              <button class="button">15</button>
+              <button class="button">25</button>
+              <button class="button">50</button>
+              <button class="button">75</button>
+            </div>
+          </div>
+        </div>
+        <div class="card__right"></div>
+      </section>
+    </main>
+  </body>
 </html>
