Add input component and layout for bill input

--- a/tip-calculator/index.html
+++ b/tip-calculator/index.html
@@ -9,12 +9,17 @@
     <link rel="stylesheet" href="./styles/base.css" />
     <link rel="stylesheet" href="./styles/objects.css" />
     <link rel="stylesheet" href="./styles/components/button.css" />
+    <link rel="stylesheet" href="./styles/components/input.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main class="container">
       <section class="card">
         <div class="card__left">
+          <div class="bill">
+            <h2 class="bill__title title title--dark">Bill</h2>
+            <input class="input bill__input" placeholder="0" />
+          </div>
           <div class="tip-buttons">
             <h2 class="tip-buttons__title title title--dark">Select Tip %</h2>
             <div class="tip-buttons__grid">
