--- a/tip-calculator/index.html
+++ b/tip-calculator/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/objects.css" />
     <link rel="stylesheet" href="./styles/components/button.css" />
     <link rel="stylesheet" href="./styles/components/input.css" />
+    <link rel="stylesheet" href="./styles/components/result-box.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -32,7 +33,21 @@
             </div>
           </div>
         </div>
-        <div class="card__right"></div>
+        <div class="card__right">
+          <div class="calculator">
+            <div class="calculator__tip result-box">
+              <h2 class="title title--white">Tip amount</h2>
+              <span class="result-box__result">$0.00</span>
+            </div>
+            <div class="result-box">
+              <h2 class="title title--white">Total</h2>
+              <span class="result-box__result">$0.00</span>
+            </div>
+            <button class="calculator__button button button--secondary">
+              Calculate
+            </button>
+          </div>
+        </div>
       </section>
     </main>
   </body>
