fix index url for tip calculator

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Dom Projects</h1>
     <ul>
-      <li><a href="tip-calculator/index.html">Tip Calculator</a></li>
+      <li><a href="tip-calculator">Tip Calculator</a></li>
     </ul>
   </body>
 </html>
